<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/counterRoot"
    tools:context="com.example.android.activity.Counter">

    <LinearLayout style="@style/counterRoot">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/quitButton"
                android:onClick="quitGame"
                android:text="@string/quit_game" />

            <ImageView
                style="@style/logoCounter"
                android:contentDescription="@string/app_name" />

            <View style="@style/logoPlaceholder" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/counters"
            style="@style/counters">

            <!-- 1st team START -->

            <LinearLayout
                android:id="@+id/firstTeamGroup"
                style="@style/counter">

                <ImageView
                    style="@style/counterStyle"
                    android:contentDescription="@string/red_team"
                    android:src="@drawable/counter_r" />

                <TextView
                    android:id="@+id/totalPointsRed"
                    style="@style/teamPoints"
                    android:text="@string/team1Points" />

                <TextView style="@style/pointLabel" />

                <ImageView
                    android:id="@+id/red3"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card3"
                    android:src="@drawable/point3" />

                <ImageView
                    android:id="@+id/red4"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card4"
                    android:src="@drawable/point4" />

                <ImageView
                    android:id="@+id/red5"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card5"
                    android:src="@drawable/point5" />

                <ImageView
                    android:id="@+id/redTask"
                    style="@style/taskIcons"
                    android:contentDescription="@string/task"
                    android:src="@drawable/task0all" />

            </LinearLayout>

            <!-- 1st team END -->

            <View style="@style/divider" />

            <!-- 2nd team START -->

            <LinearLayout
                android:id="@+id/secondTeamGroup"
                style="@style/counter">

                <ImageView
                    style="@style/counterStyle"
                    android:contentDescription="@string/green_team"
                    android:src="@drawable/counter_g" />

                <TextView
                    android:id="@+id/totalPointsGreen"
                    style="@style/teamPoints"
                    android:text="@string/team2Points" />

                <TextView style="@style/pointLabel" />

                <ImageView
                    android:id="@+id/green3"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card3"
                    android:src="@drawable/point3" />

                <ImageView
                    android:id="@+id/green4"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card4"
                    android:src="@drawable/point4" />

                <ImageView
                    android:id="@+id/green5"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card5"
                    android:src="@drawable/point5" />

                <ImageView
                    android:id="@+id/greenTask"
                    style="@style/taskIcons"
                    android:contentDescription="@string/task"
                    android:src="@drawable/task0all" />

            </LinearLayout>

            <!-- 2nd team END -->

            <View style="@style/divider" />

            <!-- 3rd team START -->

            <LinearLayout
                android:id="@+id/thirdTeamGroup"
                style="@style/counter">

                <ImageView
                    style="@style/counterStyle"
                    android:contentDescription="@string/blue_team"
                    android:src="@drawable/counter_b" />

                <TextView
                    android:id="@+id/totalPointsBlue"
                    style="@style/teamPoints"
                    android:text="@string/team3Points" />

                <TextView style="@style/pointLabel" />

                <ImageView
                    android:id="@+id/blue3"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card3"
                    android:src="@drawable/point3" />

                <ImageView
                    android:id="@+id/blue4"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card4"
                    android:src="@drawable/point4" />

                <ImageView
                    android:id="@+id/blue5"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card5"
                    android:src="@drawable/point5" />

                <ImageView
                    android:id="@+id/blueTask"
                    style="@style/taskIcons"
                    android:contentDescription="@string/task"
                    android:src="@drawable/task0all" />

            </LinearLayout>

            <!-- 3rd team END -->

            <View style="@style/divider" />

            <!-- 4th team START -->

            <LinearLayout
                android:id="@+id/fourthTeamGroup"
                style="@style/counter">

                <ImageView
                    style="@style/counterStyle"
                    android:contentDescription="@string/yellow_team"
                    android:src="@drawable/counter_y" />

                <TextView
                    android:id="@+id/totalPointsYellow"
                    style="@style/teamPoints"
                    android:text="@string/team4Points" />

                <TextView style="@style/pointLabel" />

                <ImageView
                    android:id="@+id/yellow3"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card3"
                    android:src="@drawable/point3" />

                <ImageView
                    android:id="@+id/yellow4"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card4"
                    android:src="@drawable/point4" />

                <ImageView
                    android:id="@+id/yellow5"
                    style="@style/cardButtons"
                    android:contentDescription="@string/card5"
                    android:src="@drawable/point5" />

                <ImageView
                    android:id="@+id/yellowTask"
                    style="@style/taskIcons"
                    android:contentDescription="@string/task"
                    android:src="@drawable/task0all" />

            </LinearLayout>

            <!-- 4th team END -->

        </LinearLayout>

        <TextView
            android:id="@+id/winnerLabel"
            style="@style/winnerLabel" />

        <ImageView
            android:id="@+id/winnerCounter"
            style="@style/winnerCounter"
            android:layout_below="@id/winnerLabel"
            android:contentDescription="@string/the_winner_is" />

        <LinearLayout style="@style/bottomControls">

            <Button
                android:id="@+id/timerButton"
                style="@style/counterButton"
                android:onClick="start_timer"
                android:text="@string/start_timer" />

            <TextView
                android:id="@+id/timerLabel"
                style="@style/timer" />

            <Button
                android:id="@+id/resetButton"
                style="@style/counterButton"
                android:onClick="resetPoints"
                android:text="@string/reset_points" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>